# hoct

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_tracking.py
scripts/: prepare_test_data.py
src/eet_inference/: __about__.py  __init__.py  _api.py  _logging.py  annotation.py  cli.py  correction.py
src/eet_inference/_tests/: __init__.py  conftest.py  test_api.py  test_batching.py  test_correction.py  test_frame_dataset.py  test_tiled_dataset.py  test_tracking.py  test_transforms.py
src/eet_inference/data/: __init__.py  _annotated_dataset.py  _batching.py  _frame_dataset.py  _labeled_dataset.py  _tiled_dataset.py  _transforms.py  frame_dataset.py
src/eet_inference/inference/: __init__.py  _predict.py
src/eet_inference/tracking/: __init__.py  _solver.py  _tracklet_solver.py
src/hoct/: __init__.py  _api.py  _io.py  _logging.py  _models.py  cli.py  correction.py
src/hoct/_tests/: __init__.py  conftest.py  test_api.py  test_batching.py  test_cli_track.py  test_constants.py  test_correction.py  test_features.py  test_frame_dataset.py  test_graph.py  test_io.py  test_models.py  test_predict.py  test_tiled_dataset.py  test_tracking.py  test_transforms.py
src/hoct/data/: __init__.py  _batching.py  _frame_dataset.py  _labeled_dataset.py  _tiled_dataset.py  _transforms.py
src/hoct/features/: __init__.py  constants.py  features.py  graph.py
src/hoct/inference/: __init__.py  _predict.py
src/hoct/tracking/: __init__.py  _solver.py  _tracklet_solver.py
src/hoct_inference/: __init__.py  _api.py  _io.py  _logging.py  cli.py  correction.py
src/hoct_inference/_tests/: __init__.py  conftest.py  test_api.py  test_batching.py  test_cli_track.py  test_correction.py  test_frame_dataset.py  test_io.py  test_predict.py  test_tiled_dataset.py  test_tracking.py  test_transforms.py
src/hoct_inference/data/: __init__.py  _batching.py  _frame_dataset.py  _labeled_dataset.py  _tiled_dataset.py  _transforms.py
src/hoct_inference/inference/: __init__.py  _predict.py
src/hoct_inference/tracking/: __init__.py  _solver.py  _tracklet_solver.py
