[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "eet-inference"
version = "0.1.0"
description = "Inference API and CLI for Edge Embedding Tracking (EET) model with JIT-compiled models"
readme = "README.md"
authors = [
    { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cell-tracking", "microscopy", "inference", "biological-imaging", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "polars>=1.0.0",
    "spatial-graph>=0.0.5",
    "tracksdata",
    "eet-features>=0.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.21.1",
    "rich>=14.3.1",
    "dask>=2026.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.uv.sources]
eet-features = { workspace = true }
tracksdata = { git = "https://github.com/royerlab/tracksdata", rev = "dde23bd8c8668e48f2e75660867c389fad8e2308" }

[project.scripts]
eet-inference = "eet_inference.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/eet_inference/__about__.py"

# https://docs.astral.sh/ruff
[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
ignore = ["E712"]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"_tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src/eet_inference/_tests"]
