[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hoct"
dynamic = ["version"]
description = "Inference and tracking for the Higher-Order Cell Tracking Transformer (HOCT) model"
readme = "README.md"
authors = [
    { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cell-tracking", "microscopy", "inference", "biological-imaging", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pooch>=1.7.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "h5py>=3.9.0",
    "toolz>=0.11.0",
    "dask[array]>=2022.3.0",
    "polars>=1.0.0",
    "torch>=2.0.0",
    "spatial-graph>=0.0.5",
    "tracksdata>=0.1.0rc4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.21.1",
    "rich>=14.3.1",
    "gurobipy>12.0.1,<13.0.0",
    "matplotlib>=3.10.8",
]

[project.urls]
Homepage = "https://github.com/royerlab/hoct"
Repository = "https://github.com/royerlab/hoct"

[project.optional-dependencies]
correction = [
    "scikit-learn>=1.6.0",
]
bioio = [
    "bioio>=3.0",
    "bioio-tifffile>=1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "bioio>=3.0",
    "bioio-tifffile>=1.0",
    "scikit-learn>=1.6.0",
]

[project.scripts]
hoct = "hoct.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hoct/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hoct"]
exclude = ["src/hoct/_tests"]

# https://docs.astral.sh/ruff
[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
ignore = ["E712"]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"_tests/*.py" = ["D", "S"]
"src/hoct/cli.py" = ["B008"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src/hoct/_tests"]
